--- a/ui/CertDetail.ui
+++ b/ui/CertDetail.ui
@@ -7,11 +7,8 @@
     <x>0</x>
     <y>0</y>
     <width>450</width>
-    <height>448</height>
+    <height>450</height>
    </rect>
-  </property>
-  <property name="windowTitle">
-   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -86,13 +83,7 @@
       <attribute name="title">
        <string>S&amp;tatus</string>
       </attribute>
-      <layout class="QVBoxLayout">
-       <property name="spacing">
-        <number>6</number>
-       </property>
-       <property name="margin">
-        <number>9</number>
-       </property>
+      <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
         <spacer>
          <property name="orientation">
@@ -223,23 +214,24 @@
           <string>Fingerprints</string>
          </property>
          <layout class="QGridLayout">
-          <property name="margin">
-           <number>8</number>
-          </property>
-          <property name="spacing">
-           <number>6</number>
-          </property>
-          <item row="1" column="0">
-           <widget class="QLabel" name="TextLabel2_2">
-            <property name="text">
-             <string>SHA1</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="TextLabel1_2">
             <property name="text">
              <string>MD5</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="CopyLabel" name="fpMD5">
+            <property name="toolTip">
+             <string>An md5 hashsum of the certificate</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="TextLabel2_2">
+            <property name="text">
+             <string>SHA1</string>
             </property>
            </widget>
           </item>
@@ -250,10 +242,17 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
-           <widget class="CopyLabel" name="fpMD5">
+          <item row="2" column="0">
+           <widget class="QLabel" name="TextLabel2_3">
+            <property name="text">
+             <string>SHA256</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="CopyLabel" name="fpSHA256">
             <property name="toolTip">
-             <string>An md5 hashsum of the certificate</string>
+             <string>A SHA-256 hashsum of the certificate</string>
             </property>
            </widget>
           </item>
