--- a/ui/ExportDialog.ui
+++ b/ui/ExportDialog.ui
@@ -6,22 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>510</width>
-    <height>314</height>
+    <width>653</width>
+    <height>370</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string/>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
      <item>
       <widget class="QLabel" name="label">
        <property name="font">
@@ -133,10 +127,10 @@
       <property name="margin">
        <number>8</number>
       </property>
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <item row="1" column="3">
+      <item row="0" column="1" colspan="2">
+       <widget class="QLineEdit" name="filename"/>
+      </item>
+      <item row="0" column="3">
        <widget class="QToolButton" name="fileBut">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
@@ -149,7 +143,7 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="0" column="0">
        <widget class="QLabel" name="TextLabel14">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
@@ -159,22 +153,6 @@
         </property>
         <property name="text">
          <string>Filename</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" colspan="2">
-       <widget class="QLineEdit" name="filename"/>
-      </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QLabel" name="filenameLabel">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Please enter the filename</string>
         </property>
        </widget>
       </item>
@@ -189,23 +167,20 @@
      <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
-     <layout class="QVBoxLayout">
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <property name="margin">
-       <number>8</number>
-      </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <widget class="QLabel" name="formatLabel">
+       <widget class="QLabel" name="infoBox">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="text">
-         <string/>
+         <string notr="true"/>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
@@ -213,13 +188,7 @@
        </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout">
-        <property name="spacing">
-         <number>6</number>
-        </property>
-        <property name="margin">
-         <number>0</number>
-        </property>
+       <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QLabel" name="TextLabel1">
           <property name="text">
@@ -228,9 +197,9 @@
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="exportFormat">
+         <widget class="focusCombo" name="exportFormat">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -240,16 +209,6 @@
        </layout>
       </item>
      </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QFrame" name="extraFrame">
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
     </widget>
    </item>
    <item>
@@ -277,6 +236,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>focusCombo</class>
+   <extends>QComboBox</extends>
+   <header>widgets/FocusCombo.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>filename</tabstop>
   <tabstop>fileBut</tabstop>
